production/mariadb/serviceadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-admin-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
